# scanner

./: .gitignore  Makefile  README.md  electron-builder.json  electron-builder.yml.bak  frontendserver.js  package-lock.json  package.json  plc_toolkit.js  rsrc.syso
assets/: buildfrontendddddd.bat  builditttt.bat
assets/Documentation/: How to use.docx  PLC Toolkit.md  README.docx  README.txt  howtobuild.txt
assets/frontend/: server.js
assets/nodes7/: nodeS7.js  package.json
config/: Connections.json  Scanners.json
neu/: PLC_Toolkit-linux  neutralino.config.json
neu/resources/: asset-manifest.json  index.html
plc/routes/: .getKeysTT13.js.un~  connect.js  createStruct.js  getKeys.js  getKeysTT13.js~  getTT13Keys.js
public/: electron.js  index.html  manifest.json
scripts/: buildWindows.sh  builditttt.bat  init.bat  rundev.sh  teleStart.sh  winbuild.sh
serve/: app.js  connect.js  scratchPad.js  server.js  tmp.js
serve/config/: Connections.json
src/: App.css  App.js  Server.js  connect.js  connections.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs  main.rs_2021-04-18__18:08:03
src/components/: .Hex.js.swp  Appbar.js  Bookmarks.js  Card.js  Container.js  Coordinates.js  DataTable.js  DataTableContainer.js  Default.js  DefaultTable.js  ErrorBoundry.js  Hex.js  Home.js  Iframe.js  MFSHex.js  PlcConnections.js  Row.js  SelectConn.js  Table.js  VisuHex.js  connections.js
src/config/: Bookmarks.json  Columns.json  Connections.js  Coordinates.json  DB171Columns.json  DB1852Columns.json  HexVal.json  (+11 more)
webview_plctoolkit/: Makefile  build.bat  go.mod  main.go  rsrc_windows_amd64.syso
(+166 files in other folders)
