[package]
name = "plc_toolkit"
version = "0.1.0"
description = "Read Data from Siemens S7 PLCs"
authors = ["you"]
license = ""
repository = ""
default-run = "plc_toolkit"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta-rc.0" }

[dependencies]
tauri = { version = "1.0.0-beta-rc.0", features =[]}

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
